# plugds

./: .clang-tidy  .clangd  .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN_REPORT.md  GEMINI.md  LIFECYCLE_GUIDE.md  architect.md  check_code.bat  config.ini  manage_subprojects.py  progress.txt  pyproject.toml  sonar-project.properties  subprojects_params.json  suppress_rules.rule  update_cpp_templates.py
cmake/: conan_env_setup.cmake  conan_find_android_ndk.cmake  conan_install.cmake  conan_publisher_macro.cmake  conan_publisher_v1.cmake  conan_publisher_v2.cmake  publish_single_package.cmake  utils.cmake
conan_profiles/: conan1_android_debug.profile  conan1_android_release.profile  conan1_android_relwithdebinfo.profile  conan1_gcc13_arm64_cross_debug.profile  conan1_gcc13_arm64_cross_release.profile  conan1_gcc13_arm64_cross_relwithdebinfo.profile  conan1_gcc13_arm64_debug.profile  conan1_gcc13_arm64_release.profile  conan1_gcc13_arm64_relwithdebinfo.profile  conan1_gcc13_debug.profile  conan1_gcc13_release.profile  conan1_gcc13_relwithdebinfo.profile  conan1_gcc9_arm64_cross_debug.profile  conan1_gcc9_arm64_cross_release.profile  conan1_gcc9_arm64_cross_relwithdebinfo.profile  conan1_gcc9_arm64_debug.profile  conan1_gcc9_arm64_release.profile  conan1_gcc9_arm64_relwithdebinfo.profile  conan1_gcc9_debug.profile  conan1_gcc9_release.profile  conan1_gcc9_relwithdebinfo.profile  conan1_macos_arm64_cross_debug.profile  conan1_macos_arm64_cross_release.profile  conan1_macos_arm64_cross_relwithdebinfo.profile  conan1_macos_arm64_debug.profile  conan1_macos_arm64_release.profile  conan1_macos_arm64_relwithdebinfo.profile  conan1_macos_x86_64_debug.profile  conan1_macos_x86_64_release.profile  conan1_macos_x86_64_relwithdebinfo.profile  conan1_vs2017_debug.profile  conan1_vs2017_release.profile  conan1_vs2017_relwithdebinfo.profile  conan1_vs2022_debug.profile  conan1_vs2022_relwithdebinfo.profile
src/app/: CMakeLists.txt  SplashScreen.cpp  SplashScreen.cpp.bak  SplashScreen.h  conanfile.py.in  images.qrc  main.cpp  user_config.cmake  version.rc.in
src/dscore/: ActionContainer.cpp  ActionContainer.h  ActionProxy.cpp  ActionProxy.h  CMakeLists.txt  CollapsibleWidget.cpp  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  ContextManager.cpp  ContextManager.h  Core.cpp  Core.h  CoreComponent.cpp  CoreComponent.h  CoreStrings.cpp  CoreUIProvider.cpp  CoreUIProvider.h  IMode.cpp  IModeManager.cpp  LanguageService.cpp  LanguageService.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Menu.cpp  Menu.h  MenuAndToolbarManager.cpp  MenuAndToolbarManager.h  MenuService.cpp  MenuService.h  ModeManager.cpp  ModeManager.h  ModeSwitcher.cpp  ModeSwitcher.h  OverlayCanvas.cpp  OverlayCanvas.h  PageManager.cpp  PageManager.h  (+18 more)
src/dscore/include/dscore/: CollapsibleWidget.h  CoreConstants.h  CoreSpec.h  CoreStrings.h  IActionContainer.h  ICommand.h  ICommandManager.h  ICommandProvider.h  IConfiguration.h  IContextManager.h  ICore.h  ILanguageService.h  ILogger.h  IMenu.h  IMenuProvider.h  IMenuService.h  IMode.h  IModeManager.h  IPageManager.h  IPageProvider.h  IStatusbarManager.h  IStatusbarProvider.h  ISystemTrayIcon.h  ISystemTrayIconManager.h  ISystemTrayIconWidget.h  IThemeService.h  IToolbarProvider.h  IWorkbench.h  Theme.h
src/dscore/resources/i18n/: dscore_zh_CN.ts
src/dscore/resources/themes/: base.qss  dark.ini  dark.qss  light.ini  light.qss
src/dsresources/: CMakeLists.txt  DsresourcesComponent.cpp  DsresourcesComponent.h  LanguageService.cpp  LanguageService.h  ThemeService.cpp  ThemeService.h  conanfile.py.in  metadata.json  resources.qrc  user_config.cmake  version.rc.in
src/dsresources/resources/themes/: light.qss
src/extsystem/: CMakeLists.txt  Component.cpp  ComponentLoader.cpp  IComponent.cpp  IComponentManager.cpp  conanfile.py.in  user_config.cmake  version.rc.in
src/extsystem/include/extsystem/: Component.h  ComponentLoader.h  ComponentSystemSpec.h  IComponent.h  IComponentManager.h  IInterface.h
src/tests/: CMakeLists.txt  conanfile.py.in  main.cpp  testsConfig.cmake.in  user_config.cmake  version.rc.in
src/tests/dscore/: test_command_manager.cpp  test_context_manager.cpp  test_language_service.cpp  test_menu_and_toolbar_manager.cpp  test_mode_manager.cpp  test_statusbar_manager.cpp  test_theme.cpp  test_theme_service.cpp
src/tests/extsystem/: test_classes.h  test_component_loader.cpp  test_component_manager.cpp
src/ws1/: CMakeLists.txt  Ws1Component.cpp  Ws1Component.h  Ws1Page.cpp  Ws1Page.h  Ws1Strings.cpp  Ws1UIProvider.cpp  Ws1UIProvider.h  conanfile.py.in  metadata.json  user_config.cmake  version.rc.in  ws1.qrc
src/ws1/include/ws1/: Ws1Strings.h
src/ws1/resources/i18n/: ws1_zh_CN.ts
src/ws2/: CMakeLists.txt  Ws2Component.cpp  Ws2Component.h  Ws2Page.cpp  Ws2Page.h  Ws2Strings.cpp  Ws2UIProvider.cpp  Ws2UIProvider.h  conanfile.py.in  metadata.json  user_config.cmake  version.rc.in  ws2.qrc
src/ws2/include/ws2/: Ws2Strings.h
src/ws2/resources/i18n/: ws2_zh_CN.ts
templates/: config.cmake.in.j2  generic_conanfile.py.j2  subproject_cmakelists.txt.j2  user_config.cmake  version.rc.in.j2
